--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "expo": "^15.1.0",
     "react": "~15.4.0",
     "react-native": "0.42.3",
+    "react-native-gifted-chat": "^0.1.4",
     "socket.io": "^1.7.3"
   }
 }
