--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.15.2",
+    "global": "^4.3.2",
+    "nodemon": "^1.11.0",
     "socket.io": "^1.7.3"
   },
   "devDependencies": {},
